# authstack

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.runtime  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json
.github/workflows/: docker-build-push.yml  test.yml
docs/: package.json  production.md
docs/app/: layout.tsx
docs/lib/: layout.shared.tsx
migrations/: 001_admin.sql  001_create_applications.sql  002_create_users.sql  002_tenant.sql  003_create_organizations.sql  004_create_members.sql  005_create_accounts.sql  006_create_refresh_sessions.sql  007_create_admin_users.sql  008_admin_roles.sql  009_create_app_invites.sql
src/: cli.rs  config.rs  db.rs  error.rs  ids.rs  jwk.rs  main.rs  openapi.rs
src/commands/: bootstrap_admin.rs  mod.rs
src/middleware/: admin_auth.rs  app_auth.rs  mod.rs
src/models/: account.rs  admin_role.rs  admin_user.rs  app_invite.rs  app_permission.rs  application.rs  directory.rs  identity_policy.rs  member.rs  mod.rs  org_role.rs  organization.rs  refresh_session.rs  user.rs
src/routes/: admin.rs  admin_sse.rs  auth.rs  invites.rs  jwks.rs  me.rs  members.rs  mod.rs  org_roles.rs  orgs.rs  permissions.rs  users.rs
src/services/: admin_access.rs  admin_auth.rs  admin_ops.rs  auth.rs  datastar.rs  identity.rs  invites.rs  jwt.rs  mod.rs  password.rs  roles.rs
static/css/: admin.css  admin.input.css
templates/admin/: _layout.html  app_detail.html  app_orgs.html  app_permissions.html  (+14 more)
tests/: .env.test  package.json  tsconfig.json  vitest.config.ts
(+24 files in other folders)
